added socket, list history
